# 3BX

./: .gitignore  .gitmodules  .mcp.json  .roomodes  CLAUDE.md  CMakeLists.txt  build.sh  compile_and_run.sh  conanfile.txt  conventions.md  documentation.odp  reinstall_extension.sh  run_tests.sh
.agent/workflows/: 3bx_coder.md  coder.md  extension_coder.md
.gemini/: settings.json
.gemini/agents/: 3bx_coder.md  coder.md  extension_coder.md
.roo/rules-3bx-coder/: 1_workflow.xml
.roo/rules-cpp-coder/: 1_workflow.xml
.roo/rules-extension-coder/: 1_workflow.xml
docs/: COMPILER.md  Examples.md  Getting-Started.md  Home.md  LANGUAGE.md  PATTERN_MATCHING.md  Patterns.md  SECTIONS.md  TOKENIZING.md  Writing-Your-First-Program.md
examples/: calculator_gui.3bx  custom_loops.3bx  test_pattern.3bx
include/ast/: ast.hpp
include/codegen/: codegen.hpp
include/compiler/: codeGenerator.hpp  diagnostic.hpp  importResolver.hpp  optimizer.hpp  patternResolver.hpp  patternTree.hpp  sectionAnalyzer.hpp  typeInference.hpp
include/dap/: dapServer.hpp
include/interpreter/: interpreter.hpp
include/lexer/: lexer.hpp  token.hpp
include/lsp/: lspServer.hpp  semanticTokenTypes.hpp  semanticTokensBuilder.hpp
include/parser/: parser.hpp
include/pattern/: pattern_matcher.hpp  pattern_registry.hpp  pattern_resolution.hpp  precedence.hpp
include/semantic/: semantic.hpp
lib/: class.3bx  event.3bx  loop.3bx  loops.3bx  opengl.3bx  prelude.3bx  print.3bx  section.3bx  type.3bx  vector.3bx
lsp_mcp/: index.js
scripts/: build.sh  check_conventions.py  install.sh
src/: main.cpp
src/ast/: ast.cpp
src/codegen/: codegen.cpp
src/compiler/: IndentData.cpp  IndentData.h  codeGenerator.cpp  codeLine.cpp  codeLine.h  compiler.cpp  compiler.h  diagnostic.cpp  diagnostic.h  importResolver.cpp  optimizer.cpp  parseContext.cpp  parseContext.h  patternDefinition.cpp  patternDefinition.h  patternReference.h  patternResolver.cpp  patternTree.cpp  range.cpp  range.h  section.h  sectionAnalyzer.cpp  sectionType.cpp  sectionType.h  sourceFile.h  typeInference.cpp  variableReference.h
src/compiler/codegen/: codegen.cpp
src/compiler/pattern/: patternDefinition.cpp  patternDefinition.h  transformedPattern.cpp  transformedPattern.h
src/compiler/pattern/pattern_tree/: matchProgress.cpp  matchProgress.h  patternElement.cpp  patternElement.h  patternMatch.h  patternTreeNode.cpp  patternTreeNode.h  variableMatch.h
src/compiler/pattern_tree/: matchProgress.cpp  matchProgress.h  patternElement.cpp  patternElement.h  patternMatch.h  patternTree.h  patternTreeNode.cpp  patternTreeNode.h
src/compiler/section/: effectSection.cpp  effectSection.h  expressionSection.cpp  expressionSection.h  patternsSection.cpp  patternsSection.h  section.cpp  section.h  sectionType.cpp  sectionType.h  variable.h
src/dap/: dapServer.cpp
src/interpreter/: interpreter.cpp
src/lexer/: lexer.cpp  token.cpp
src/lsp/: fileSystem.cpp  fileSystem.h  languageServer.cpp  languageServer.h  lspFileSystem.cpp  lspFileSystem.h  lspServer.cpp  semanticTokens.h  sourceFile.h  stdioTransport.cpp  stdioTransport.h  tbxServer.cpp  tbxServer.h  tcpTransport.cpp  tcpTransport.h  textDocument.cpp  textDocument.h  transport.h
src/parser/: parser.cpp
src/pattern/: pattern_matcher.cpp  pattern_registry.cpp  pattern_resolution.cpp  precedence.cpp
src/semantic/: semantic.cpp
tests/required/0_simple/: main.3bx
tests/required/1_libtest/: expected.txt  main.3bx
tests/required/2_patterntest/: expected.txt  main.3bx
tests/required/3_importtest/: expected.txt  main.3bx  other.3bx
tests/required/4_custompatternstest/: expected.txt  main.3bx
tests/required/5_sectiontest/: expected.txt  main.3bx
tests/required/6_languagetest/: expected.txt  main.3bx  test_out
vscode-extension/: .vscodeignore  README.md  esbuild.js  language_configuration.json  package.json
vscode-extension/snippets/: 3bx.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: 3bx.tmLanguage.json  3bx_tm_language.json
vscode-extension/themes/: 3bx-colorful.json  3bx-dark.json  3bx_dark.json  base_dark.json
